<resources>
    <string name="app_name">Booklovers</string>
    <string name="sign_up_logo">Sign up logo</string>
    <string name="fullname">Fullname</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">sign In</string>
    <string name="sign_in_logo">sign in Logo</string>
    <string name="action_sign_in">Sign in </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
</resources>
