<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="16dp"
    tools:context=".Sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/sign_up_logo"
            android:src="@drawable/signup" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="#fff7da"
            android:drawableStart="@drawable/user"
            android:drawablePadding="12dp"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/sign_Up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="#FFF7da"
            android:drawableStart="@drawable/email"
            android:drawablePadding="12dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="#fff7da"
            android:drawableStart="@drawable/phone_call"
            android:drawablePadding="12dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="#FFF7DA"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="#FFF7DA"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="12dp"
            android:hint="@string/confirm_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_btn"
            android:fontFamily="@font/arial_bold"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="#fff7da" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arial_bold"
                android:text="@string/have_an_account"
                android:textColor="#fff7da" />

            <TextView
                android:id="@+id/signInLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff7da"
                android:focusable="true"
                android:fontFamily="@font/arial_bold"
                android:text="@string/sign_in"
                android:textColor="@color/buttonColor"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyleLargeInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>